--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,16 @@
 name: Greetings
 
-on: [pull_request, issues]
+on: [pull_request_target, issues]
 
 jobs:
   greeting:
     runs-on: ubuntu-latest
-
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
-    - name: Greet Contributor
-      if: github.event_name == 'pull_request'
-      run: echo "Thank you for your pull request!"
-      
-    - name: Greet Issue Opener
-      if: github.event_name == 'issues'
-      run: echo "Thank you for opening an issue!"
+    - uses: actions/first-interaction@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        issue-message: "Thank you for creating an issue, please tell us what you found."
+        pr-message: "Thank you for the pull request, we will review an approve if it meets warranted changes"
