--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,18 @@
-name: Greetings
-
-on: [pull_request_target, issues]
-
+name: Pull Request on Branch Push
+on:
+  push:
+    branches-ignore:
+      - staging
+      - launchpad
+      - production
 jobs:
-  greeting:
+  auto-pull-request:
+    name: PullRequestAction
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-       repo-token: ${{ secrets.GITHUB_TOKEN }}
-       issue-message: "Thank you for creating an issue, please tell us what you found."
-       pr-message: "Thank you for the pull request, we will review an approve if it meets warranted changes"
+      - name: pull-request-action
+        uses: vsoch/pull-request-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_PREFIX: "update/"
+          PULL_REQUEST_BRANCH: "master"
