--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,43 +1,34 @@
-name: Release
+name: Deploy to servers
+
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
+
 env:
-  FILE_NAME: "Dark-Everywhere"
-  FILE_EXTENSION: ".zip"
-  BRANCHES: "1.19.3 1.19 1.18"
-  PACKAGE_NAME: "assets pack.mcmeta pack.png"
-  TAG_NAME: "${{ env.TAG_NAME || '0.0.1' }}"
+  DEPLOY_HOST1: example.com
+  DEPLOY_HOST2: another-example.com
+
 jobs:
-  release:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Create a release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: "${{ env.TAG_NAME }}"
-        release_name: "Dark Everywhere ${{ env.TAG_NAME }}🌙"
-        draft: true
-        prerelease: false
-    - name: Generate a zip archive for each branch
+
+    - name: Build the application
       run: |
-        for branch in ${BRANCHES}; do
-          zip -r "$FILE_NAME-$branch$FILE_EXTENSION" $PACKAGE_NAME
-        done
-    - name: Upload files
-      uses: actions/upload-artifact@v2
-      with:
-        name: "$FILE_NAME-$branch$FILE_EXTENSION"
-        path: "$FILE_NAME-$branch$FILE_EXTENSION"
-    - name: Update release
-      uses: actions/update-release@v1
+        # commands to build the application
+
+    - name: Deploy to first server
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        release_id: ${{ env.RELEASE_ID }}
-        body: "Build description here"
+        DEPLOY_HOST: ${{ env.DEPLOY_HOST1 }}
+      run: |
+        # commands to deploy the build to the first server
+
+    - name: Deploy to second server
+      env:
+        DEPLOY_HOST: ${{ env.DEPLOY_HOST2 }}
+      run: |
+        # commands to deploy the build to the second server
