--- a/.github/workflows/reviewersAssigned.yml
+++ b/.github/workflows/reviewersAssigned.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: pull-request-action
-      uses: vsoch/pull-request-action@d703f40f3af5ae294f9816395ddf2e3d2d3feafa # 1.0.21
+      uses: jge162/pull-request-action@v1 # 1.0.21
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH_PREFIX: update/
