--- a/.github/workflows/reviewersAssigned.yml
+++ b/.github/workflows/reviewersAssigned.yml
@@ -13,5 +13,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH_PREFIX: update/
-        PULL_REQUEST_BRANCH: master
+        PULL_REQUEST_BRANCH: jge162/OOP_in_Python
         PULL_REQUEST_REVIEWERS: jge162
