--- a/.github/workflows/reviewersAssigned.yml
+++ b/.github/workflows/reviewersAssigned.yml
@@ -1,17 +1,23 @@
 name: Pull Request on Branch Push
+
 on:
   push:
     branches-ignore:
     - devel
+
 jobs:
   auto-pull-request:
     name: PullRequestAction
     runs-on: ubuntu-latest
     steps:
-    - name: pull-request-action
-      uses: jge162/pull-request-action@v1 # 1.0.21
+    - name: Checkout Code
+      uses: actions/checkout@v2
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH_PREFIX: update/
-        PULL_REQUEST_BRANCH: jge162/OOP_in_Python
-        PULL_REQUEST_REVIEWERS: jge162
+        COMMIT_MESSAGE: "Automated Pull Request"
+        BRANCH_NAME: "update/branch-${{ env.TIMESTAMP }}"
+        BASE: master
+        HEAD: "${{ env.BRANCH_NAME }}"
+        LABELS: "auto-generated"
